--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css"/>
 </head>
-<body>
+<body class="mat-typography">
   <app-root />
   <script src="./node_modules/preline/dist/preline.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.js.iife.js"></script>
