--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <html lang="es" translate="no">
+      <meta name="google" content="notranslate">
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,400&display=swap"
       rel="stylesheet"
