--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8"/>
     <title>DBINVENTORYGESTOR</title>
-    <base href="/db-inventory-gestor/browser/"/>
-    <!-- <base href="/"/> -->
+    <!-- <base href="/db-inventory-gestor/browser/"/> -->
+    <base href="/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <html lang="es" translate="no">
